<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.metrosoft.arafat.salebook.activity.ProductSend"
                                                 android:background="#ccddff" >


    <include
        android:id="@+id/tool_bar"
        layout="@layout/porduct_send_headbar"
        ></include>


    <ListView
        android:id="@+id/listitems"
        android:layout_width="fill_parent"
        android:layout_height="710sp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="55dp"
        android:descendantFocusability="beforeDescendants"
        android:visibility="visible">
    </ListView>
    <LinearLayout
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:background="@color/colorAccent"
        android:layout_marginBottom="80sp"

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="4"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="5dp"
            android:text="@string/order_total"
            android:textColor="@color/white"
            />
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:gravity="end"
            android:text="@string/qnty"
            />

        <TextView
            android:id="@+id/totalQnty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            />
        <TextView
            android:textColor="@color/white"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:gravity="end"
            android:text="@string/price"
            />

        <TextView
            android:id="@+id/totaluniteprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/zeroratio"
            android:textColor="@color/white"
            />

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:onClick="delOrder"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_delete"
        app:backgroundTint="@android:color/holo_red_light"
        app:borderWidth="1dp"
        app:elevation="3dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/holo_red_dark" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="calcTotal"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/calculator"
        app:backgroundTint="@android:color/white"
        app:borderWidth="1dp"
        app:elevation="3dp"

        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/holo_red_dark" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/fab"
        android:onClick="startSendingOrder"
        android:src="@drawable/ic_menu_send"
        app:backgroundTint="@android:color/holo_green_light"
        app:borderWidth="1dp"
        app:elevation="3dp"
        app:fabSize="normal"

        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/holo_orange_light"
        />

</android.support.design.widget.CoordinatorLayout>
